tests/invalid/Reference_Invalid_1.whiley
function f(int[] vec) -> int:
    // made a typo here :)
    *vec = 1
    //
    return 0